<resources>
    <string name="app_name">VK Groups</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Drawer items -->
    <string name="drawer_search_communities">Search groups</string>
    <string name="drawer_invites">Invites</string>
    <string name="drawer_groups">Groups</string>
    <string name="drawer_events">Events</string>
    <string name="drawer_my_events">My events</string>
    <string name="drawer_friends_events">Friends events</string>
    <string name="drawer_recommendations">Recommendations</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_send">Send feedback</string>

    <!-- Groups page -->
    <string name="page_my_communities">My groups</string>
    <string name="page_friends_communities">Friends groups</string>
    <plurals name="friends">
        <item quantity="one">%1$d friend</item>
        <item quantity="other">%1$d friends</item>
    </plurals>
    <string name="not_sure">Not sure</string>

    <!-- Dates -->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>

    <!-- Posts -->
    <string name="read_more">Read more</string>
    <string name="read_less">Read less</string>

    <!-- System -->
    <string name="try_again">Try again</string>

    <!-- Attachment types -->
    <string name="wiki_page">Page</string>
    <string name="file">File</string>
    <string name="image">Image</string>
    <string name="gif_image">GIF Image</string>
    <string name="note">Note</string>
    <string name="post">Post</string>
    <plurals name="poll_votes">
        <item quantity="one">%1$d vote</item>
        <item quantity="other">%1$d votes</item>
    </plurals>

    <!-- Group types -->
    <string name="publics">public</string>
    <string name="open">open</string>
    <string name="privates">private</string>
    <string name="closed">closed</string>
    <string name="page">page</string>
    <string name="group">group</string>
    <string name="event">event</string>

    <!-- Invites -->
    <string name="accept_message">You accepted the invitation</string>
    <string name="decline_message">You decline the invitation</string>
    <string name="not_sure_message">Not sure? Why, bro?</string>

</resources>
