<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_communities"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_magnify_grey600_36dp"
            android:title="@string/drawer_search_communities"/>

        <item
            android:id="@+id/nav_invites"
            android:icon="@drawable/ic_account_plus_grey600_36dp"
            android:title="@string/drawer_invites"/>

        <item
            android:id="@+id/nav_communities"
            android:icon="@drawable/ic_account_multiple_grey600_36dp"
            android:title="@string/drawer_groups"/>

        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_account_multiple_grey600_36dp"
            android:title="@string/drawer_events"/>

        <item
            android:id="@+id/nav_recommendations"
            android:icon="@drawable/ic_thumb_up_grey600_36dp"
            android:title="@string/drawer_recommendations"/>

    </group>

    <group>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/drawer_share"/>
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/drawer_send"/>
    </group>

</menu>
